--- a/app/sass/block/cabinet.scss
+++ b/app/sass/block/cabinet.scss
@@ -739,6 +739,40 @@ svg path {
   margin: 0;
 }
 
+//delivery
+.delivery-page {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.delivery-content {
+  width: calc(100% - 370px);
+  padding: 0 30px 0 0;
+}
+
+.delivery-page__maps {
+  width: 100%;
+  height: 280px;
+  margin: 30px 0 0;
+  border: none;
+  iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+  }
+}
+
+.delivery-page__selections {
+  width: 100%;
+  align-items: stretch;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+
 @media screen and (max-width: 1199px) {
   .cabinet-box {
     width: 270px;
