--- a/app/sass/block/cabinet.scss
+++ b/app/sass/block/cabinet.scss
@@ -770,12 +770,31 @@ svg path {
   justify-content: space-between;
   flex-wrap: wrap;
   display: flex;
+
+  .check input[type="checkbox"]+label:before {
+    width: 30px;
+    height: 30px;
+    border-radius: 5px;
+  }
+
+  .check {
+    padding-left: 44px;
+    min-height: 30px;
+    display: flex;
+    align-items: center;
+  }
+
+  .check input[type="checkbox"], .check input[type="radio"] {
+    top: 0;
+    left: 0;
+    margin: 0;
+  }
 }
 
 .delivery-page__box {
   width: 48.5%;
   margin: 0 0 30px;
-  form {
+  .form-city {
     width: 100%;
     position: relative;
 
@@ -816,7 +835,7 @@ svg path {
     }
 
     .number {
-      width: 90%;
+      width: 73%;
       position: relative;
     }
 
@@ -848,6 +867,17 @@ svg path {
       padding: 0 90px 0 18px;
       font-weight: bold;
     }
+  }
+}
+
+.form-city {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  .tov-price-count__title {
+    margin: 0 0 0 11px;
+    font-size: 16px;
+    color: #58595B;
   }
 }
 
